tests/ui/pub/pub-ident-struct-4.rs
// run-rustfix

pub T(String);
//~^ ERROR missing `struct` for struct definition

fn main() {}
